--- a/views/pages/tr/okullarinkapanmasina.html.twig
+++ b/views/pages/tr/okullarinkapanmasina.html.twig
@@ -8,7 +8,7 @@
 $(document).ready(function() {
 
 	$("#kaczamankaldi").countdown({
-		date: "june 15, 2012",
+		date: "june 15, 2012 12:30:00",
 		htmlTemplate: "%{d} gün %{h} saat %{m} dakika ve %{s} saniye"
 	});
 	
